# bevy_experiments_2

./: Cargo.toml
src/: main.rs  utilities.rs
src/components/: game_time.rs  mod.rs  ship.rs
src/game_plugins/: mod.rs
src/game_plugins/ship_fight/: components.rs  mod.rs  systems.rs
src/games/: mod.rs
src/games/ship_fight/: components.rs  config.rs  mod.rs  systems.rs
src/systems/: common_systems.rs  mod.rs  ship_systems.rs
