[package]
name = "bevy_experiments_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.2"}
## all feautes
derive_more = {version = "1.0.0-beta.3", features = ["full"]}
bevy_rapier2d = "0.22.0"