[package]
name = "bevy_experiments_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version = "0.11.2"}
bevy-inspector-egui = "0.19.0"
## all feautes
derive_more = {version = "1.0.0-beta.3", features = ["full"]}
bevy_rapier2d = "0.22.0"
naia-bevy-client = "0.21.1"
naia-bevy-server = "0.21.1"
naia-bevy-shared = "0.21.1"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3